--- a/laboratorio/templates/laboratorio/laboratorio_confirm_delete.html
+++ b/laboratorio/templates/laboratorio/laboratorio_confirm_delete.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="my-4">¿Estás seguro que deseas eliminar el laboratorio: "{{ laboratorio.nombre }}"?</h1>
+        <h1 class="my-4">¿Estás seguro que deseas eliminar eliminar laboratorio: "{{ laboratorio.nombre }}"?</h1>
         <form method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Confirm</button>
